Added an index to the player list to facilite faster finding.

--- a/za.co.sagoclubs.CaptureResults/res/layout/select_black_player.xml
+++ b/za.co.sagoclubs.CaptureResults/res/layout/select_black_player.xml
@@ -28,11 +28,11 @@
 
     </LinearLayout>
 
-    <ListView
+    <za.co.sagoclubs.IndexableListView
         android:id="@+id/lsvSelectBlackPlayer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
-    </ListView>
+    </za.co.sagoclubs.IndexableListView>
 
 </LinearLayout>
