--- a/za.co.sagoclubs.CaptureResults/res/layout/select_player.xml
+++ b/za.co.sagoclubs.CaptureResults/res/layout/select_player.xml
@@ -28,11 +28,10 @@
 
     </LinearLayout>
 
-    <ListView
+    <za.co.sagoclubs.IndexableListView
         android:id="@+id/lsvSelectPlayer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
-
-    </ListView>
+    </za.co.sagoclubs.IndexableListView>
 
 </LinearLayout>
