Converted to a general use application, with former admin functions hidden

--- a/za.co.sagoclubs.CaptureResults/res/layout/logfile.xml
+++ b/za.co.sagoclubs.CaptureResults/res/layout/logfile.xml
@@ -49,6 +49,6 @@
         android:textColor="#000000"
         android:textSize="10sp"
         android:layout_weight="1.0"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:textAppearance="?android:attr/textAppearanceMedium" android:typeface="monospace" android:scrollHorizontally="true"/>
 </ScrollView>
 </LinearLayout>
