--- a/za.co.sagoclubs.CaptureResults/res/layout/main.xml
+++ b/za.co.sagoclubs.CaptureResults/res/layout/main.xml
@@ -9,18 +9,34 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#336699" >
-
+
         <TextView
             android:id="@+id/txtSelectWhitePlayer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="#336699"
-            android:text="@string/app_name"
+            android:text="@string/south_african_go"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textStyle="bold" />
 
     </LinearLayout>
-
+    <Button
+        android:id="@+id/btnPlayerRatings"
+        style="@style/ButtonText"
+		android:background="@drawable/magenta_button"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/player_ratings" android:textStyle="bold"/>
+
+    <Button
+        android:id="@+id/btnSettings"
+        style="@style/ButtonText"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/yellow_button"
+        android:text="@string/settings"
+        android:textStyle="bold" />
+    
     <Button
         android:id="@+id/btnCaptureResult"
         style="@style/ButtonText"
@@ -38,13 +54,5 @@
         android:layout_height="wrap_content"
         android:text="@string/display_log_file"
         android:textStyle="bold" />
-
-    <Button
-        android:id="@+id/btnSettings"
-        style="@style/ButtonText"
-		android:background="@drawable/yellow_button"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/settings" android:textStyle="bold"/>
 
 </LinearLayout>
