--- a/za.co.sagoclubs.CaptureResults/res/layout/list_item.xml
+++ b/za.co.sagoclubs.CaptureResults/res/layout/list_item.xml
@@ -5,5 +5,6 @@
     android:padding="10dp"
     android:textSize="16sp" 
     android:textColor="#000000"
-    android:background="#FFFFFF">
+    android:background="@drawable/player_list_item_bg"  
+    >
 </TextView>
