--- a/za.co.sagoclubs.CaptureResults/res/layout/multi_select_list_item.xml
+++ b/za.co.sagoclubs.CaptureResults/res/layout/multi_select_list_item.xml
@@ -6,5 +6,6 @@
     android:textSize="16sp" 
 	android:checkMark="?android:attr/listChoiceIndicatorMultiple"
     android:textColor="#000000"
-    android:background="#FFFFFF">
+    android:background="@drawable/player_list_item_bg"  
+    >
 </CheckedTextView>
